# complaint-classifier

./: .gitignore  docker-compose.yml  dockerfile  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_initial_data_exploration.ipynb
src/: evaluate.py  main.py  preprocessing.py  schema.py  services.py  train.py  tune.py  utils.py
tests/: test_api.py  test_preprocessing.py  test_services.py
